log/build_2025-01-17_17-28-52/curb_detection/stderr.log
  File "/home/lance/work_dir/curb_detection/install/curb_detection/lib/python3.10/site-packages/curb_detection/curb_detector.py", line 21
    print(point_cloud_numpy）
                           ^
SyntaxError: invalid character '）' (U+FF09)

